hphp/hack/test/typecheck/classname/typename_no_call.php.exp
File "typename_no_call.php", line 14, characters 3-4:
Was expecting a class, but got a string (Typing[4026])
